<resources>
    <string name="app_name">MuniDenunciasApp</string>
    <string name="titulo_de_la_denuncia">Titulo de la Denuncia</string>
    <string name="Descripcion">Intel Core i7 es una familia de procesadores 4 núcleos de la arquitectura Intel x86-64, lanzados al comercio en 2008.</string>
    <string name="_200_00">200.00</string>
    <string name="longitud">200.00</string>
    <string name="username">Username:</string>
    <string name="userName">Username</string>
    <string name="nameLabel">Name:</string>
    <string name="correoLabel">Correo:</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="titulo">Titulo</string>
    <string name="comentario">Comentario</string>
    <string name="latitud">Latitud</string>
    <string name="longitudReg">Longitud</string>
</resources>
