<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titulo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="16dp"
                android:textStyle="bold"
                android:text="@string/titulo_de_la_denuncia"/>

            <TextView
                android:id="@+id/comentario_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titulo_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:text="@string/Descripcion"/>

            <TextView
                android:id="@+id/latitud_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comentario_text"
                android:padding="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_200_00"/>
            <TextView
                android:id="@+id/longitud_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/latitud_text"
                android:padding="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/longitud"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_below="@id/longitud_text"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</ScrollView>